--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/node": "^12.7.4",
     "express": "^4.17.1",
+    "firebase-admin": "^8.5.0",
     "typescript": "^3.6.2"
   }
 }
