--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "build": "tsc",
+    "start": "tsc && node dist/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit && eslint ./ --ext=ts --fix"
   },
@@ -17,11 +18,11 @@
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.2",
-    "typescript": "^3.6.2"
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "@types/node": "^12.7.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^3.6.2"
   }
 }
